<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_profile">My Profile</string>
    <string name="nav_projects">My Projects</string>
    <string name="nav_today">Today</string>
    <string name="nav_nextDays">Next 7 Days</string>
    <string name="nav_about_us">About Us</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_item_activity_titles">
        <item>@string/nav_profile</item>
        <item>@string/nav_projects</item>
        <item>@string/nav_today</item>
        <item>@string/nav_nextDays</item>
    </string-array>

    <string name="title_profile">My Profile</string>
    <string name="title_projects">My Projects</string>
    <string name="title_today">Today</string>
    <string name="title_nextDays">Next 7 Days</string>
    <string name="title_assignTask">Assign Task</string>
    <string name="title_taskDetails">Task Details</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account"><u> Sign Up </u></string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="save_info">Save</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="assign_task_error_message">Please make sure you enter an assignee, task and project!</string>
    <string name="assign_task_error_message2">Please make sure you choose an assignee from your contacts!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="done">Done</string>

    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="login_form_txt">Login Form</string>
    <string name="register_form_txt">Register Form</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="prompt_email">someone@example.com</string>
    <string name="prompt_mobile_phone">Mobile phone</string>
    <string name="prompt_address">Address</string>
    <string name="three">Three</string>
    <string name="task_name">Task</string>
    <string name="project_name">Project</string>
    <string name="asignee_name">Assignee</string>
    <string name="dueDateText">Due date</string>
    <string name="locationText">Location</string>
    <string name="descriptionText">Description</string>
    <string name="priorityText">Priority</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="prompt_user">User name</string>
    <string name="prompt_mail">E-mail address</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="string_assignee">Asignee: </string>
    <string name="string_assigned_by">Assigned by: </string>
    <string name="string_due_date">Due date: </string>
    <string name="string_project">Project: </string>
    <string name="text_save">Save</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
        non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="privacy_policy_txt">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. We are offering you this app to use for your own personal use without cost, but you should be aware that you cannot send it on to anyone else, and you’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to TaskManager.</string>
    <string name="statusText">Status</string>

</resources>