<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.teodora.employeetaskmanager.Activities.AssignTaskActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <LinearLayout
            android:id="@+id/RequiredInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:layout_below="@+id/appbar"
            android:background="@color/colorPrimary"
            android:paddingTop="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--<EditText-->
                    <!--android:id="@+id/etAsigneeName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="45dp"-->
                    <!--android:layout_marginStart="45dp"-->
                    <!--android:layout_marginRight="45dp"-->
                    <!--android:layout_marginEnd="45dp"-->
                    <!--android:inputType="text"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="@dimen/small_txt_size"-->
                    <!--android:hint="@string/asignee_name"/>-->

                <AutoCompleteTextView
                    android:id="@+id/etAsigneeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginEnd="45dp"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_txt_size"
                    android:hint="@string/asignee_name"
                    android:completionThreshold="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginEnd="45dp"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:hint="@string/task_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginEnd="45dp"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:hint="@string/project_name"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:background="@color/dirty_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dueDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/dueDateIcon"
                    android:layout_height="32dp"
                    android:layout_width="32dp"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:src="@drawable/ic_query_builder_black_24dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/small_txt_size"
                        android:textColor="@color/primaryText"
                        android:text="@string/dueDateText" />

                    <TextView
                        android:id="@+id/etDueDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/very_small_txt_size"
                        android:textColor="@color/primaryText"
                        android:hint="Today" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="5dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:id="@+id/priorityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/priorityIcon"
                    android:layout_height="32dp"
                    android:layout_width="32dp"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:src="@drawable/ic_flag_black_24dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/small_txt_size"
                        android:textColor="@color/primaryText"
                        android:text="@string/priorityText" />

                    <TextView
                        android:id="@+id/etPriority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/very_small_txt_size"
                        android:textColor="@color/primaryText"
                        android:hint="Medium" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="5dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/descriptionIcon"
                    android:layout_height="32dp"
                    android:layout_width="32dp"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:src="@drawable/ic_description_black_24dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/small_txt_size"
                        android:textColor="@color/primaryText"
                        android:text="@string/descriptionText" />

                    <TextView
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/very_small_txt_size"
                        android:textColor="@color/primaryText"
                        android:hint="No description" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="5dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_height="32dp"
                    android:layout_width="32dp"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/small_txt_size"
                        android:textColor="@color/primaryText"
                        android:text="@string/locationText" />

                    <TextView
                        android:id="@+id/etLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:textSize="@dimen/very_small_txt_size"
                        android:textColor="@color/primaryText"
                        android:hint="No location" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_send_white_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"/>



</android.support.design.widget.CoordinatorLayout>
